--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=myblog
+DB_DATABASE=shurblog
 DB_USERNAME=dwes
 DB_PASSWORD=abc123.
 
