--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:gMwd8x4VkUdoaGaewDpH0JNt0GmHC7PZAXX8r2OjELM=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
+DB_CONNECTION=
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=shurblog
-DB_USERNAME=dwes
-DB_PASSWORD=abc123.
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -24,12 +24,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.gmail.com
+MAIL_HOST=
 MAIL_PORT=465
-MAIL_USERNAME=elpruebascuentaza@gmail.com
-MAIL_PASSWORD=Usuario.1
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=elpruebascuentaza@gmail.com
+MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME=ShurBlog
 
 AWS_ACCESS_KEY_ID=
